--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   position: sticky;
 
   z-index: 2;
-  top: 20px;
+  top: 0;
   height: var(--height-toolbar);
 
   justify-content: space-between;
