중간 3문단짜리 추가

--- a/style.css
+++ b/style.css
@@ -132,4 +132,15 @@
 
 
 
+.semi_section {
+  display: flex;
+  justify-content: space-between;
 
+
+}
+
+.semi_explanation {
+  display: inline-block;
+  width: 328px;
+
+}
