--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 .header__homelink {
   display: inline-block;
   cursor: pointer;
-  hegiht:var(--height-toolbar);
+  height:var(--height-toolbar);
 }
 
 .header__logo {
@@ -40,9 +40,14 @@
   font-weight:700;
 }
 
-.header__nav a {
+a {
   text-decoration: none;
   color: black;
+}
+
+a:hover {
+  opacity: 0.5;
+
 }
 
 .header__nav-item:nth-child(3) a {
@@ -60,7 +65,6 @@
 
 }
 
-
 .main_title {
   font-size:54px;
 
@@ -70,7 +74,7 @@
   display: inline-block;
   height: 320px;
 
-  padding: 48px 0;
+  padding: 64px 0;
 
 
 }
@@ -94,14 +98,11 @@
   height: 140px;
 }
 
-.section_words {
-
-}
-
 .section_title {
   font-size: 24px;
 
 }
+
 
 .section_sentence {
   font-size: 16px;
